<resources>
    <string name="app_name">Ma première application</string>
    <string name="menu_settings">Settings</string>
    <string name="button_label">Show message</string>
    <string name="display_label">display</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="age">Âge</string>
    <string name="domaine">Domaine de compétence</string>
    <string name="telephone">Numéro de téléphone</string>
    <string name="name">Name</string>
    <string name="firstname">First name</string>
    <string name="domain">Skills area</string>
    <string name="phone">Phone number</string>
</resources>